# wasm-compiler-service

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md
src/: db.cpp  db.h  exec.cpp  exec.h  execute_handler.cpp  execute_handler.h  http_server.cpp  http_server.h  json_utils.cpp  json_utils.h  main.cpp  types.h
